--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^6.0.13",
     "multer": "^1.4.3",
     "nodemon": "^2.0.15",
+    "socket.io": "^4.4.0",
     "uuid": "^8.3.2"
   }
 }
