--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "express-validator": "^6.13.0",
+    "graphql": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
     "multer": "^1.4.3",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "validator": "^13.7.0"
   }
 }
